--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
+    "dompurify": "^2.0.11",
+    "marked": "^1.0.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,8 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "scss": "node-sass --watch src/scss/ -o src/stylesheets",
-    "dev": "concurrently \"npm run start\" \"npm run scss\" \"cd ../server && npm run-script start \""
+    "dev": "concurrently \"npm run start\" \"npm run scss\" \"cd ./server && npm run-script start \" \"cd ../portfolio-blog && npm run develop\""
   },
+  "proxy": "http://localhost:1337",
   "eslintConfig": {
     "extends": "react-app"
   },
