--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "scss": "node-sass --watch src/scss/ -o src/stylesheets",
-    "dev": "concurrently \"npm run start\" \"npm run scss\" \"cd ../portfolio-blog && npm run develop\""
+    "dev": "concurrently \"npm run start\" \"npm run scss\" \"cd ./server && npm run develop\""
   },
   "proxy": "http://localhost:1337",
   "eslintConfig": {
