--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.13.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -22,8 +25,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "serve -s build",
-    "heroku-postbuild": "npm run build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
