--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "dompurify": "^2.0.11",
+    "history": "^4.10.1",
     "marked": "^1.0.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
